[tool.poetry]
name = "mat-stat-15points"
version = "0.1.0"
description = ""
authors = ["Danil Farkhutdinov <dfarsal@ya.ru>"]
readme = "README.md"
packages = [{include = "mat_stat"}]

[tool.poetry.dependencies]
python = "3.11"
jupyter = "^1.0.0"
pandas = "^2.0.1"
matplotlib = "^3.7.1"
scipy = "^1.10.1"
bintrees = "^2.2.0"
memory-profiler = "^0.61.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
